# chirps_analysis

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
analyses/: 01_dev_download_data.ipynb  02_download_data.ipynb
analyses/data/: 1981-01-01-1981-01-31.csv  1981-02-01-1981-02-28.csv  1981-03-01-1981-03-31.csv  1981-04-01-1981-04-30.csv  1981-05-01-1981-05-31.csv  1981-06-01-1981-06-30.csv  1981-07-01-1981-07-31.csv  1981-08-01-1981-08-31.csv  1981-09-01-1981-09-30.csv  1981-10-01-1981-10-31.csv  1981-11-01-1981-11-30.csv  1981-12-01-1981-12-31.csv  1982-01-01-1982-01-31.csv  1982-02-01-1982-02-28.csv  1982-03-01-1982-03-31.csv  1982-04-01-1982-04-30.csv  1982-05-01-1982-05-31.csv  1982-06-01-1982-06-30.csv  1982-07-01-1982-07-31.csv  1982-08-01-1982-08-31.csv  1982-09-01-1982-09-30.csv  1982-10-01-1982-10-31.csv  1982-11-01-1982-11-30.csv  1982-12-01-1982-12-31.csv  1983-01-01-1983-01-31.csv  1983-02-01-1983-02-28.csv  1983-03-01-1983-03-31.csv  1983-04-01-1983-04-30.csv  1983-05-01-1983-05-31.csv  1983-06-01-1983-06-30.csv  1983-07-01-1983-07-31.csv  1983-08-01-1983-08-31.csv  1983-09-01-1983-09-30.csv  1983-10-01-1983-10-31.csv  1983-11-01-1983-11-30.csv  1983-12-01-1983-12-31.csv  1984-01-01-1984-01-31.csv  1984-02-01-1984-02-29.csv  1984-03-01-1984-03-31.csv  1984-04-01-1984-04-30.csv  (+463 more)
analyses/my_utils/: utils.py
docker/: Dockerfile  docker-compose.yml
